--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "bishmeet.todolist.github.io",
   "version": "0.1.0",
-  "homepage": "https://BishmeetKaur.github.io/Bishmeet.todolist.github.io",
+  "homepage": "https://BishmeetKaur.github.io/bishmeet.todolist.github.io",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
